Closed
Bug 684126
Opened 13 years ago
Closed 13 years ago
IonMonkey: Segmentation fault in js1_5/Regress/regress-416628.js
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
People
(Reporter: dvander, Assigned: dvander)
References
Details
Attachments
(1 file)
688 bytes,
patch
|
sstangl
:
review+
|
Details | Diff | Splinter Review |
The function that computes an offset to the relocation table returns something wrong, so we crash during GC.
![]() |
Assignee | |
Comment 1•13 years ago
|
||
Attachment #557731 -
Flags: review?(sstangl)
Updated•13 years ago
|
Attachment #557731 -
Flags: review?(sstangl) → review+
![]() |
Assignee | |
Comment 2•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•