Fix relocation table offset (bug 684126, r=sstangl).