js/src/ion/TypeOracle.h
@@ -61,7 +61,8 @@ enum MIRType
     MIRType_Object,
     MIRType_Value,
     MIRType_Any,        // Any type.
-    MIRType_None        // Invalid, used as a placeholder.
+    MIRType_None,       // Invalid, used as a placeholder.
+    MIRType_Slots       // A slots vector
 };
 
 class TypeOracle
